# rag-homework

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
src/rag/: __init__.py  config.py  graph.py  ingest.py  main.py  prompts.py  retrieve.py  schemas.py
src/rag/nodes/: __init__.py  answer.py  summarize.py  validate.py
tests/: test_schemas.py
