[project]
name = "swedbank-rag"
version = "0.1.0"
description = "RAG application that summarizes ESG/annual reports and answers predefined questions with source-grounded evidence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "pydantic>=2.7",
    "pypdf>=4.0",
    "faiss-cpu>=1.8",
    "streamlit>=1.36",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
rag-generate = "rag.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
